--- a/frontend-next-migration/src/shared/ui/DropdownWrapper/ui/DropdownWrapper.module.scss
+++ b/frontend-next-migration/src/shared/ui/DropdownWrapper/ui/DropdownWrapper.module.scss
@@ -57,7 +57,7 @@
 }
 .childrenWrapper {
     display: flex;
-    inline-size: 100px;
+    inline-size: 120px;
     overflow-wrap: break-word;
 }
 
